fixed the image slide flicker bug

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,12 +12,17 @@ body {
 body {
   font-family: "Roboto Condensed", sans-serif;
   color: rgb(54, 54, 54);
-  
+
   /* background-color: rgb(235, 235, 235); */
 }
 
-h1, h2, h3, h4, h5, h6 {
-  font-family: 'Montserrat', sans-serif;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Montserrat", sans-serif;
 }
 
 .button {
@@ -74,7 +79,7 @@ header {
   justify-items: center;
 
   color: azure;
-  padding: 0 .5rem;
+  padding: 0 0.5rem;
 }
 
 /* Brand container */
@@ -173,7 +178,13 @@ header {
   width: 1.5rem;
 }
 
+
 /* Cover image animation */
+.img-slide-load {
+  width: 0;
+  height: 0;
+  animation: slide 1s 1;
+}
 .img-slide {
   animation: slide 30s 2s ease-in-out infinite;
   width: 100%;
@@ -185,24 +196,24 @@ header {
 }
 
 @keyframes slide {
-  20% {
+  16.6% {
     background-image: url("../img/cover/cover2.jpg");
     background-position: 60% center;
   }
-  40% {
+  33.3% {
     background-image: url("../img/cover/cover3.jpg");
     background-position: 60% center;
   }
 
-  60% {
+  50% {
     background-image: url("../img/cover/cover4.jpg");
     background-position: center;
   }
-  80% {
+  66.6% {
     background-image: url("../img/cover/cover5.jpg");
     background-position: 75% center;
   }
-  100% {
+  83.3% {
     background-image: url("../img/cover/cover6.jpg");
     background-position: 60% center;
   }
@@ -312,13 +323,13 @@ main {
   margin-bottom: 1.5rem;
   padding: 0 2rem;
   font-size: 1.7rem;
-  letter-spacing: .05rem;
+  letter-spacing: 0.05rem;
 }
 
 .box p {
   margin-bottom: 2rem;
   padding: 0 2rem;
-  line-height: 1.3rem
+  line-height: 1.3rem;
 }
 
 .box1 {
@@ -413,7 +424,7 @@ main {
 /* Wave image above the footer */
 .wave {
   margin-bottom: -1rem;
-  background-size: cover; 
+  background-size: cover;
   min-width: 60rem;
 }
 .wave img {
